# scantailor-experimental

./: .gitignore  AbstractCommand.h  BUILD.RU.md  CMakeLists.txt  COPYING.md  LICENSE_COMPLETE.in  PageInfo.h  README.md
packaging/windows/: CMakeLists.txt  readme.en.txt  readme.ru.txt  scantailor-experimental.nsi.in
packaging/windows/build_deps/: CMakeLists.txt
src/: AbstractFilter.h  Application.cpp  AtomicFileOverwriter.cpp  AtomicFileOverwriter.h  BackgroundExecutor.cpp  BackgroundExecutor.h  BackgroundTask.cpp  BackgroundTask.h  BasicImageView.cpp  BasicImageView.h  BubbleAnimation.cpp  CMakeLists.txt  CommandLine.cpp  CommandLine.h  CompositeCacheDrivenTask.h  ConsoleBatch.cpp  ConsoleBatch.h  ContentBox.cpp  ContentBox.h  ContentBoxPropagator.cpp  ContentBoxPropagator.h  ContentSpanFinder.cpp  ContentSpanFinder.h  DebugImageView.cpp  DebugImageView.h  DebugImagesImpl.cpp  DebugImagesImpl.h  DebugViewFactory.h  Despeckle.cpp  Despeckle.h  ErrorWidget.cpp  ErrorWidget.h  EstimateBackground.cpp  EstimateBackground.h  FastImageMetadataLoader.cpp  FastImageMetadataLoader.h  FileNameDisambiguator.cpp  FileNameDisambiguator.h  FilterOptionsWidget.cpp  FilterOptionsWidget.h  (+113 more)
src/acceleration/: AcceleratableOperations.h  AccelerationPlugin.h  CMakeLists.txt  DefaultAccelerationProvider.cpp  DefaultAccelerationProvider.h  NonAcceleratedOperations.cpp  NonAcceleratedOperations.h  acceleration_config.h
src/acceleration/opencl/: BinaryFill.cpp  (+29 more)
src/crash_reporter/: CMakeLists.txt  CrashReportDialog.cpp  MultipartFormData.cpp  main.cpp
src/dewarping/: CMakeLists.txt  Curve.cpp  Curve.h  CylindricalSurfaceDewarper.cpp  CylindricalSurfaceDewarper.h  DepthPerception.cpp  DepthPerception.h  DetectVerticalBounds.cpp  DetectVerticalBounds.h  DewarpingImageTransform.cpp  DewarpingImageTransform.h  DistortionModel.cpp  DistortionModel.h  DistortionModelBuilder.cpp  DistortionModelBuilder.h  RasterDewarper.cpp  RasterDewarper.h  TextLineRefiner.cpp  TextLineRefiner.h  TextLineSegmenter.cpp  TextLineSegmenter.h  TextLineTracer.cpp  TextLineTracer.h  TopBottomEdgeTracer.cpp  TopBottomEdgeTracer.h  dewarping_config.h
src/filter_dc/: ContentBoxCollector.h  ThumbnailCollector.h
src/foundation/: AlignedArray.h  AutoRemovingFile.cpp  AutoRemovingFile.h  CMakeLists.txt  CachingFactory.h  CopyableByMemcpy.h  DebugImages.h  FastQueue.h  Grid.h  GridAccessor.h  GridLineTraverser.cpp  GridLineTraverser.h  IndexSequence.h  IntrusivePtr.h  LineIntersectionScalar.cpp  LineIntersectionScalar.h  MaxAccumulator.h  MinMaxAccumulator.h  MultipleTargetsSupport.h  NumericTraits.h  ObjectSwapper.h  ObjectSwapperFactory.h  ObjectSwapperImpl.h  ObjectSwapperImplGrid.h  ObjectSwapperImplQImage.cpp  ObjectSwapperImplQImage.h  PerformanceTimer.cpp  PerformanceTimer.h  PriorityQueue.h  Property.h  PropertyFactory.cpp  PropertyFactory.h  PropertySet.cpp  PropertySet.h  Proximity.cpp  Proximity.h  RefCountable.h  RelativeMargins.h  RoundingHasher.cpp  RoundingHasher.h  (+14 more)
src/imageproc/: AbstractImageTransform.h  AdjustBrightness.cpp  AdjustBrightness.h  AffineImageTransform.cpp  AffineImageTransform.h  AffineTransform.cpp  AffineTransform.h  AffineTransformedImage.cpp  AffineTransformedImage.h  BWColor.h  BWPixelProxy.h  BadAllocIfNull.cpp  Binarize.cpp  Binarize.h  BinaryImage.cpp  BinaryImage.h  BinaryThreshold.cpp  BinaryThreshold.h  BitOps.cpp  BitOps.h  CMakeLists.txt  ColorFilter.cpp  ColorFilter.h  ColorForId.h  ColorInterpolation.cpp  ColorMixer.h  ConnComp.h  ConnCompEraser.cpp  ConnCompEraser.h  ConnCompEraserExt.cpp  ConnCompEraserExt.h  Connectivity.h  ConnectivityMap.cpp  ConnectivityMap.h  DrawOver.cpp  DrawOver.h  FindPeaksGeneric.h  GaussBlur.cpp  GaussBlur.h  GrayImage.cpp  (+61 more)
src/interaction/: CMakeLists.txt  DragHandler.cpp  DragHandler.h  DragWatcher.cpp  DragWatcher.h  DraggableLineSegment.cpp  DraggableLineSegment.h  DraggableObject.h  DraggablePoint.cpp  DraggablePoint.h  InteractionHandler.cpp  InteractionHandler.h  InteractionState.cpp  InteractionState.h  InteractiveXSpline.cpp  InteractiveXSpline.h  ObjectDragHandler.cpp  ObjectDragHandler.h  ZoomHandler.cpp  ZoomHandler.h
src/math/: ArcLengthMapper.cpp  ArcLengthMapper.h  CMakeLists.txt  HomographicTransform.h  LineBoundedByPolygon.cpp  LineBoundedByRect.cpp  LinearFunction.cpp  LinearFunction.h  PolylineIntersector.cpp  PolylineIntersector.h  QuadraticFunction.cpp  QuadraticFunction.h  SidesOfLine.cpp  SidesOfLine.h  ToLineProjector.cpp  ToLineProjector.h  XSpline.cpp  XSpline.h  math_config.h
src/resources/: GPLv3.html  license.html.in  resources.qrc
src/stages/: CMakeLists.txt
src/stylesheets/: dark_blue.qss  dark_blue.qss.pal
src/tests/: CMakeLists.txt  TestContentSpanFinder.cpp  TestMatrixCalc.cpp  TestQtPolygonIntersection.cpp  TestSmartFilenameOrdering.cpp
src/translations/: scantailor-experimental_bg.ts  scantailor-experimental_cs.ts  scantailor-experimental_de.ts  scantailor-experimental_es.ts  scantailor-experimental_fr.ts  scantailor-experimental_hr.ts  scantailor-experimental_it.ts  scantailor-experimental_ja.ts  scantailor-experimental_pl.ts  scantailor-experimental_pt_BR.ts  scantailor-experimental_ro.ts  scantailor-experimental_ru.ts  scantailor-experimental_sk.ts  scantailor-experimental_uk.ts  scantailor-experimental_untranslated.ts  scantailor-experimental_zh_CN.ts  scantailor-experimental_zh_TW.ts
src/ui/: AboutDialog.ui  CMakeLists.txt  MainWindow.ui  NewOpenProjectPanel.ui  SettingsDialog.ui
src/zones/: BasicSplineVisualizer.cpp  BasicSplineVisualizer.h  CMakeLists.txt  EditableSpline.cpp  EditableSpline.h  EditableZoneSet.cpp  EditableZoneSet.h  SerializableSpline.cpp  SerializableSpline.h  SplineSegment.cpp  SplineSegment.h  SplineVertex.cpp  SplineVertex.h  Zone.cpp  Zone.h  ZoneContextMenuInteraction.cpp  ZoneContextMenuInteraction.h  ZoneContextMenuItem.h  ZoneCreationInteraction.cpp  ZoneCreationInteraction.h  ZoneDefaultInteraction.cpp  ZoneDefaultInteraction.h  ZoneInteractionContext.cpp  ZoneInteractionContext.h  ZoneSet.cpp  ZoneSet.h  ZoneVertexDragInteraction.cpp  ZoneVertexDragInteraction.h
(+563 files in other folders)
